# BaseMacro

./: .gitignore  BaseMacro.bat  CMakeLists.txt  CMakePresets.json  app.manifest  build.bat  build.spec  changelog.txt  config.json  deploy.bat  main.py  quick-build.bat  readme.md  resources.qrc  txt.txt
app/: macro.py  mainwindow.py  optionmenu.py  taskmanager.py  worker.py
include/: DefaultConstants.h  DialogBase.h  configmanager.h  dialogabout.h  dialoghowtouse.h  dialogtips.h  mainwindow.h  settingswindow.h  threadmanager.h
resources/: style.qss
src/: auto.py  config.py  configmanager.cpp  dialogabout.cpp  dialogabout.ui  dialoghowtouse.cpp  dialoghowtouse.ui  dialogtips.cpp  dialogtips.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  option.py  settingswindow.cpp  settingswindow.ui
src/actionmode/: dialogclick.cpp  dialogclick.h  dialogdelay.cpp  dialogdelay.h  dialogkeyboard.cpp  dialogkeyboard.h
src/core/: DefaultConstants.h  DialogBase.h  actionpool.cpp  actionpool.h  baseaction.cpp  baseaction.h  configmanager.cpp  configmanager.h  dialogpool.cpp  dialogpool.h  filemanager.cpp  filemanager.h  macrobuild.cpp  macrobuild.h  threadmanager.cpp  threadmanager.h
src/ui/: dialogabout.ui  dialogclick.ui  dialogdelay.ui  dialoghowtouse.ui  dialogkeyboard.ui  dialogtips.ui  macroeditor.ui  mainwindow.ui  settingswindow.ui
src/utils/: helper.cpp  helper.h
src/widgets/: dialogabout.cpp  dialogabout.h  dialoghowtouse.cpp  dialoghowtouse.h  dialogtips.cpp  dialogtips.h  macroeditor.cpp  macroeditor.h  settingswindow.cpp  settingswindow.h
tasks/: task1.py  task2.py  task3.py  task4.py  task5.py  task6.py
utils/: utils.py
